[gd_scene load_steps=8 format=3 uid="uid://bglkuw3ume551"]

[ext_resource type="Texture2D" uid="uid://ka31stl2ji3x" path="res://icon.svg" id="1_67a6e"]
[ext_resource type="Script" uid="uid://dnhc2cr7htbm3" path="res://Scene/Player/player.gd" id="1_yic5t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uuj77"]
radius = 64.5
height = 129.0

[sub_resource type="AtlasTexture" id="AtlasTexture_yic5t"]
atlas = ExtResource("1_67a6e")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_g0r71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_67a6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yic5t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yic5t"]
radius = 118.106

[sub_resource type="CircleShape2D" id="CircleShape2D_uuj77"]
radius = 119.206

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_yic5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_uuj77")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g0r71")

[node name="Dialogar" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dialogar"]
shape = SubResource("CircleShape2D_yic5t")

[node name="DetectorBasura" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorBasura"]
shape = SubResource("CircleShape2D_uuj77")

[connection signal="body_entered" from="Dialogar" to="." method="_on_dialogar_body_entered"]
[connection signal="body_exited" from="Dialogar" to="." method="_on_dialogar_body_exited"]
[connection signal="area_entered" from="DetectorBasura" to="." method="_on_detector_basura_area_entered"]
